transition is adding

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,7 +13,7 @@
     <a href="#home" class="logo">Sumayia <span>Alam</span></a>
 
 
-    <i class='bx bx-menu'></i>
+    <i class='bx bx-menu' id="menu-icon"></i>
 
 
     <nav class="navbar">
