--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -27,6 +27,33 @@
   </header>
 
 
+  <section class="home" id="home">
+   <div class="home-page">
+    <img src="r1.jpg">
+   </div>
+   <div class="home-content">
+    <h3>Hi</h3>
+    <h1>It's <span>Sumayia</span></h1>
+    <h3 class="text-animation">I'm a <span></span></h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A fuga dolore expedita eaque odio. Iste ipsam cum modi, a deserunt voluptate, labore illo laudantium esse corrupti nisi sint reiciendis tenetur?</p>
+
+    <div class="social-icons">
+      <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
+      <a href="#"><i class='bx bxl-facebook-square' ></i></a>
+      <a href="#"><i class='bx bxl-instagram' ></i></a>
+      <a href="#"><i class='bx bxl-twitter' ></i></a>
+      
+    </div>
+
+    <a href="#" class="btn">HIRE</a>
+   </div>
+  </section>
+
+
+
+
+  
+
 
 
 
