--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -35,7 +35,7 @@
     <h3>Hi</h3>
     <h1>It's <span>Sumayia</span></h1>
     <h3 class="text-animation">I'm a <span></span></h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A fuga dolore expedita eaque odio. Iste ipsam cum modi, a deserunt voluptate, labore illo laudantium esse corrupti nisi sint reiciendis tenetur?</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A fuga dolore expedita eaque odio. Iste ipsam cum modi, a deserunt voluptate, labore illo laudantium esse corrupti reiciendis tenetur?</p>
 
     <div class="social-icons">
       <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
@@ -52,12 +52,49 @@
 
 
 
+  <section class="services" id="services">
+    <h2 class="heading">Services</h2>
+
+    <div class="service-container">
+      <div class="services-box">
+        <i class='bx bxs-palette' ></i>
+        <h3>Graphic Design</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, illo.</p>
+        <a href="#" class="btn">Learn More</a>
+      </div>
+
+
+      <div class="services-box">
+        <i class='bx bx-code-alt' ></i>
+        <h3>Web Developer</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, illo.</p>
+        <a href="#" class="btn">Learn More</a>
+      </div>
+
+
+
+     
+
+
+      <div class="services-box">
+        <i class='bx bx-code' ></i>
+        <h3>Frontend Developer</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt,illo.</p>
+        <a href="#" class="btn">Learn More</a>
+      </div>
+    </div>
+  </section>
+
+
+
+
   
 
 
 
 
-
-  <script src="script.js"></script>
+  <script src="script.js">
+    
+  </script>
 </body>
 </html>
