--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -87,7 +87,10 @@
 
 
 
-
+  <section class="projects" id="projects">
+    <h2 class="heading">Projects</h2>
+    <div class="projects-container"></div>
+  </section>
   
 
 
