projects  part done

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -89,7 +89,35 @@
 
   <section class="projects" id="projects">
     <h2 class="heading">Projects</h2>
-    <div class="projects-container"></div>
+    <div class="projects-container">
+      <div class="projects-box">
+        <img src="images.jpeg" >
+        <div class="projects-info">
+          <h4>Graphic Design</h4>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero illo ipsa, et vel doloremque nemo perspiciatis assumenda quae quo omnis.</p>
+          <a href="#"><i class="bx bx-link"></i></a>
+        </div>
+      </div>
+
+      <div class="projects-box">
+        <img src="images.jpeg" >
+        <div class="projects-info">
+          <h4>Graphic Design</h4>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero illo ipsa, et vel doloremque nemo perspiciatis assumenda quae quo omnis.</p>
+          <a href="#"><i class="bx bx-link"></i></a>
+        </div>
+      </div>
+
+
+      <div class="projects-box">
+        <img src="images.jpeg" >
+        <div class="projects-info">
+          <h4>Graphic Design</h4>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero illo ipsa, et vel doloremque nemo perspiciatis assumenda quae quo omnis.</p>
+          <a href="#"><i class="bx bx-link"></i></a>
+        </div>
+      </div>
+    </div>
   </section>
   
 
