added cv for download

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -46,6 +46,7 @@
     </div>
 
     <a href="#" class="btn">HIRE</a>
+    <a href="Resume_Of_Sumayia_Alam .pdf" class="btn"   style="margin-left: 20px;">Download CV</a>
    </div>
   </section>
 
